--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/MultiverseLearningProducts/scooter-project-solution#readme",
   "dependencies": {
-    "jest": "27.5.1"
+    "eslint-plugin-jest": "^28.8.3",
+    "jest": "^27.5.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
