--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/MultiverseLearningProducts/scooter-project-solution#readme",
   "dependencies": {
     "eslint-plugin-jest": "^28.8.3",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
